fixes #28 - added high-contrast class for heroes

--- a/css/scu-less/partials/heroes.less
+++ b/css/scu-less/partials/heroes.less
@@ -61,6 +61,11 @@
   background-size: cover;
     
   .hero-body {
+    .high-contrast {
+      background-color: rgba(0, 0, 0, 0.55);
+      padding-top: 20px;
+      padding-right: 20px;
+    }
     .caption {
       padding: 15px;
       .rgba-background(255,255,255,.85);
