--- a/css/scu.css
+++ b/css/scu.css
@@ -2007,6 +2007,11 @@ html.no-fontface .evergreen.module {
 .hero.module .hero-body {
   height: 300px;
 }
+.hero.module .hero-body .high-contrast {
+  background-color: rgba(0, 0, 0, 0.55);
+  padding-top: 20px;
+  padding-right: 20px;
+}
 .hero.module .hero-body .caption {
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.85);
